k8s/peer-prep-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peer-prep-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Use the rewrite-target to manage the paths explicitly
    nginx.ingress.kubernetes.io/websocket-services: "matching-service-service"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: peerprep.com
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /question-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: question-service-service
            port:
              number: 5001
      - path: /user-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service-service
            port:
              number: 5005
      - path: /matching-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: matching-service-service
            port:
              number: 6006
